# cdscript

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
build_scripts/: build_vcpkg.sh
language/: cdscript.g4
language/tests/: assignment.cds  binaryexpr.cds  block.cds  float.cds  functiondef.cds  indexexpr.cds  integer.cds  statement.cds  string.cds  unaryexpr.cds  variable.cds
resource/: language.ts.cds
src/: cdscript.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  serialize.hpp  syntax.cpp  syntax.hpp  token.hpp  utils.hpp  visitor.hpp
src_test/: catch2_ext.hpp  test.cpp  test_lexer.cpp  test_lexer_comment.cpp  test_lexer_identifier.cpp  test_lexer_newline.cpp  test_lexer_number.cpp  test_lexer_simple.cpp  test_lexer_single.cpp  test_lexer_string.cpp  test_parser.cpp  test_serialize.cpp  test_token_number.cpp
